# MADS-MachineLearning-course

./: .gitignore  pyproject.toml
notebooks/$0-Irís/: Iris.ipynb
