[project]
name = "mads-deeplearning"
version = "0.2.0"
description = ""

authors = [
    {name = "R.Grouls", email = "Raoul.Grouls@han.nl"},
]

requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

dependencies = [
    "bayesian-optimization==3.2.0",
    "configspace>=1.2.2",
    "hyperopt>=0.2.7",
    "jupyter>=1.1.1",
    "loguru>=0.7.0",
    "mads-datasets[torch]>=0.3.12",
    "matplotlib>=3.10.8",
    "mglearn>=0.2.0",
    "pandas~=3.0.0",
    "pandas-stubs~=3.0.0",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "torch-geometric>=2.7.0",
    "torch-tb-profiler>=0.4.3",
    "tomlserializer>=0.2.0",
    "mltrainer>=0.2.4",
]

[project.optional-dependencies]
nvim = [
    "jupytext>=1.16.4",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "notebooktester>=0.2.1",
    "pyright>=1.1.392",
    "ruff>=0.9.1",
]

[tool.uv.sources]

[tool.pyright]
executionEnvironments = [
  { root = "notebooks/8_extras/swarms" }
]

